package jeu;

public abstract class EntiteePNJ extends Entitee{
}
