package jeu;

public class EntiteePJ extends Entitee{
}
